--- a/ElveWUnderground.csproj
+++ b/ElveWUnderground.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ElveWUnderground.cs" />
+    <None Include="ElveWUnderground.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WUnderground.cs" />
   </ItemGroup>
